css/site.css
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

@import "syntax.css";

webkit-viewport {width:device-width}
@-ms-viewport {width:device-width}
@-o-viewport {width:device-width}
@viewport {width:device-width}

html, body {
	margin: 0px;
	padding: 0px;
}

body {
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
	background-color: #F8F8F8;
	font-size: 14px;
}

a {
	color: #08c;
	text-decoration: none;
}

a:hover {
	color: #666;
	text-decoration: underline;
}

h1 {
	text-transform: uppercase;
	margin: 10px 0px 10px 0px;
	font-size: 38px;
}

h4, h1 a {
	color: #333;
}

h4, h1 a:hover {
	text-decoration: none;
	color: #333;
}

h2 {
	text-transform: uppercase;
	font-size: 31px;
}

h3 {
	font-size: 24px;
}

h4 {
	font-size: 17px;
}

/* smaller titles on the post page  in mobile view */
@media(max-width:400px) {
	h2 {
		font-size: 20px;
		line-height: 1;
	}
}

h3 {
	margin-top: 40px;
	margin-bottom: 20px;
	text-transform: uppercase;
}

h4 {
	text-transform: uppercase;
	margin-top: 20px;
	margin-bottom: 10px;
}

h5 {
	text-transform: uppercase;
}

footer {
	background-color: #471949;
	color: #F7F9F9;
	text-align: center;
	padding: 10px;
	margin-bottom: 50px;
	margin-top: 20px;
}

footer a {
	text-decoration: none;
	color: #F7F9F9;
}

footer a:hover {
	color: #3FAEA5;
}

.hrbar {
	background: url('/images/bk_dotted_big.png') repeat-x center;
	padding-top:10px;
	padding-bottom:10px;
	clear: both;
}

.nav-wrapper {
	background-image: linear-gradient(#333 40px, rgba(27,27,27,0));
	height: 47px;
}

nav {
	max-width: 1080px;
	margin-right: auto;
	margin-left: auto;
}

nav ul {
	list-style-type: none;
	margin-left: 0px;
	padding-left: 0px;
	margin: 0px;
}

nav ul li {
	display: inline-block;
}

nav ul li a {
	text-transform: uppercase;
	color: #9C9A05;
	padding: 10px 17px 10px 17px;
	display: inline-block;
	text-decoration: none;
	font-size: 14px;
}

nav ul li a:hover {
	text-decoration: none;
	color: #FCFCFC;
	background-color: #666;
	box-shadow: 0px 4px 0px 0px #471949;
}

.topbar {
	background-color: rgb(156, 154, 5);
	height: 10px;
}

.logo {
	padding-bottom: 10px;
	padding-top: 10px;
	padding-left: 20px;
	padding-right: 20px;
	background-color: rgb(71, 25, 73);
}

.logo-inner {
	max-width: 1060px;
	margin-right: auto;
	margin-left: auto;
}

.logo-title {
	color: #F0F0F0;
	float: left;
	margin-top: 25px;
	margin-left: 20px;
	width: 700px;
	font-family: 'Open Sans',
}

.logo-name {
	font-size: 30pt;
}

.logo-sub {
	color: #AAA;
	font-size: 15pt;
}

.link-wrapper {
	float: right;
}


.logo img {
	float: left;
}

.logo ul {
	float: right;
	list-style-type: none;
	padding-right: 20px;
	padding-top: 20px;
}

.logo ul li {
	float:right;
}

/* center the logo and the social links when in small mode */
@media(max-width: 978px) {
	.link-wrapper {
		width: 100%;
		display: flex;
  	justify-content: center;
	}

	.logo-title {
		width: 100%;
		text-align: center;
		margin-left: 0px;
	}

	.link-wrapper ul {
		padding-left: 0px;
		padding-right: 0px;
	}

	.logo img {
		float: none;
		display: block;
		margin: auto;
	}

	nav ul {
		text-align: center;
	}

	nav ul li:nth-last-child(1) {
		display: none;
	}
	nav ul li:nth-last-child(2) {
		display: none;
	}
}

/* override bootstrap default */
@media(max-width: 767px) {
	body {
		padding-right: 0px;
		padding-left: 0px;
	}
}

.logo ul li a {
	display: block;
	width: 50px;
	height: 50px;
}

.logo ul li a.twitter {
	background: url('/images/ico_social_twitter.png') 0 0 no-repeat;
	background-position: 0 1px;
	padding-right: 10px;
}

.logo ul li a.rss {
	background: url('/images/ico_social_rss.png') 0 0 no-repeat;
	background-position: 0 1px;
}

.logo ul li a.rss:hover, .logo ul li a.twitter:hover {
	background-position: 0 -49px;
}

/*****************************************************************************/
/*
/* archive
/*
/*****************************************************************************/

.dot {
	background: url('/images/bk_dotted_big.png') no-repeat center center;
}

.categories span:last-child {
	display: none;
	border: 1px solid lime;
}

#main-content {
	max-width: 925px;
	margin-right: auto;
	margin-left: auto;
}

#content {
	clear: both;
	background-color: #F0F0F0;
	padding: 20px;
	max-width: 1000px;
	margin-bottom: 50px;
}

@media(max-width: 978px) {
	#main-content {
		max-width: 450px;
		padding-right: 20px;
		padding-left: 20px;
	}
}

#main-content img {
	max-width: 100%;
}

article img {
	display: block;
	max-width: 100%;
}

ul.posts {
	list-style-type: none;
	margin-bottom: 2em;
}

ul.posts li {
	line-height: 1.75em;
}

ul.posts span {
	color: #aaa;
	font-family: Monaco, "Courier New", monospace;
}

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {
	font-size: 115%;
	text-align: justify;
	width: 42em;
	margin: 3em auto 2em;
	line-height: 1.5em;
}

.site .header a {
	font-weight: bold;
	text-decoration: none;
}

.site .header h1.title {
	display: inline-block;
	margin-bottom: 2em;
}

.site .header h1.title a {
	color: #a00;
}

.site .header h1.title a:hover {
	color: #000;
}

.site .header a.extra {
	color: #aaa;
	margin-left: 1em;
}

.site .header a.extra:hover {
	color: #000;
}

.site .meta {
	color: #aaa;
}

.site .footer {
	font-size: 80%;
	color: #666;
	border-top: 4px solid #eee;
	margin-top: 2em;
	overflow: hidden;
}

.site .footer .contact {
	float: left;
	margin-right: 3em;
}

.site .footer .contact a {
	color: #8085C1;
}

.site .footer .rss {
	margin-top: 1.1em;
	margin-right: -.2em;
	float: right;
}

.site .footer .rss img {
	border: 0;
}

/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/

.meta {
	text-transform: uppercase;
	color: #666;
	background: url('/images/bk_dotted_big.png') repeat-x;
	padding-bottom: 10px;
}

.posted-under ul {
	list-style-type: none;
}

.posted-under ul li {
	float: left;
}

.post-details span:after {
	content: ' • ';
}

.post-details span:last-child:after {
	content: '';
}

.post ol li {
	margin-left: 20px;
}

.embed-container {
	position: relative;
	padding-bottom: 56.25%;
	height: 0;
	overflow: hidden;
	max-width: 650px;
	height: auto;
	margin-bottom: 30px;
	margin-top: 30px;
	text-align: center;
}

.embed-container iframe, .embed-container object, .embed-container embed {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.comment-count {
	float:right;
	line-height: 25px;
}

.pagination {
	text-align: right;
}

table {
  background-color: #FFF;
	border-spacing: 0px;
}

table th, table td {
  padding: 8px;
  text-align: left;
  vertical-align: top;
  border: 1px solid #dddddd;
}

table th {
  font-weight: bold;
  background-color: #CCC;
}

table thead th {
  vertical-align: bottom;
}

table tbody tr:hover > td {
  background-color: #EEE;
}

figure {
	margin: 0px;
}

figure pre {
	padding: 10px;
	border-radius: 5px;
	overflow: auto;
	font-size: 14px;
	tab-size: 2;
}

.highlighter-rouge {
	padding: 2px 4px;
	color: #d14;
	white-space: nowrap;
	background-color: #f7f7f9;
	border: 1px solid #e1e1e8;
}

.post {
	line-height: 1.4;
}

.social ul {
	margin: 0px;
	padding: 0px;
	float: left;
}

.social ul li {
	list-style-type: none;
	display: inline-block;
}

.social ul li svg {
	width: 25px;
	height: 25px;
	padding: 6px;
}

